--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<li><a href="#">Testimonials</a></li>
 							<li><a href="#">Services</a></li>
 							<li><a href="contact.html">Contact</a></li>
-							<li><a href="#">Facts</a></li>
+							<li><a href="https://bit.ly/35sWgie">General Knowladge</a></li>
 						</ul>
 					</div>
 				</div>
@@ -685,12 +685,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<div class="footer_links">
 						<div class="footer_title">Useful Links</div>
 						<ul class="footer_list">
-							<li><a href="courses.html">Courses</a></li>
-							<li><a href="#">Events</a></li>
-							<li><a href="news.html">News</a></li>
-							<li><a href="#">Teachers</a></li>
-							<li><a href="#">Links</a></li>
-							<li><a href="#">FAQ</a></li>
+							<li><a href="https://bit.ly/3ofxqLz">Physic</a></li>
+							<li><a href="https://bit.ly/2FRIZHe">Chemistry</a></li>
+							<li><a href="https://bit.ly/3mi0tvQ">Math</a></li>
+							<li><a href="https://bit.ly/37EZwtP">Biology</a></li>
+							<li><a href="https://bit.ly/2Hygizt">Bangla</a></li>
+							<li><a href="https://bit.ly/2TfLAho">English</a></li>
 						</ul>
 					</div>
 				</div>
@@ -705,11 +705,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							</div>
 							<div class="footer_contact_item">
 								<div class="footer_contact_title">Phone:</div>
-								<div class="footer_contact_line">+53 345 7953 32453</div>
+								<div class="footer_contact_line">+088 01782 521464</div>
 							</div>
 							<div class="footer_contact_item">
 								<div class="footer_contact_title">Email:</div>
-								<div class="footer_contact_line">yourmail@gmail.com</div>
+								<div class="footer_contact_line">mdaashikur@gmail.com</div>
 							</div>
 						</div>
 					</div>
