Home Page Footer
Link's edited to be open in new tab

--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<li><a href="#">Testimonials</a></li>
 							<li><a href="#">Services</a></li>
 							<li><a href="contact.html">Contact</a></li>
-							<li><a href="https://bit.ly/35sWgie">General Knowladge</a></li>
+							<li><a target="_blank" href="https://bit.ly/35sWgie">General Knowladge</a></li>
 						</ul>
 					</div>
 				</div>
@@ -685,12 +685,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<div class="footer_links">
 						<div class="footer_title">Useful Links</div>
 						<ul class="footer_list">
-							<li><a href="https://bit.ly/3ofxqLz">Physic</a></li>
-							<li><a href="https://bit.ly/2FRIZHe">Chemistry</a></li>
-							<li><a href="https://bit.ly/3mi0tvQ">Math</a></li>
-							<li><a href="https://bit.ly/37EZwtP">Biology</a></li>
-							<li><a href="https://bit.ly/2Hygizt">Bangla</a></li>
-							<li><a href="https://bit.ly/2TfLAho">English</a></li>
+							<li><a target="_blank" href="https://bit.ly/3ofxqLz">Physic</a></li>
+							<li><a target="_blank" href="https://bit.ly/2FRIZHe">Chemistry</a></li>
+							<li><a target="_blank" href="https://bit.ly/3mi0tvQ">Math</a></li>
+							<li><a target="_blank" href="https://bit.ly/37EZwtP">Biology</a></li>
+							<li><a target="_blank" href="https://bit.ly/2Hygizt">Bangla</a></li>
+							<li><a target="_blank" href="https://bit.ly/2TfLAho">English</a></li>
 						</ul>
 					</div>
 				</div>
